<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bottom Navigation Example</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="the_shop">THE SHOP</string>
    <string name="your_appointment_is_scheduled">Your appointment is Scheduled!</string>
    <string name="thank_you_for_choosing_us">Thank you for choosing us!</string>
    <string name="body">Body</string>
    <string name="we_look_forward_to_working_with_you">We look forward to working with you!</string>
    <string name="make_new_appointment">Make New Appointment</string>
    <string name="home">Home</string>
    <string name="appointment_confirmation">Appointment Confirmation</string>
    <string name="latest_maintenance_dates">Latest maintenance dates:</string>
    <string name="appointment_history">Appointment History</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="vehicle">Vehicle</string>
    <string name="details">Details</string>
    <string name="appointments">Appointments</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="details_for_appointment">Details for appointment</string>
    <string name="make_of_vehicle">Make of vehicle</string>
    <string name="make_an_appointment">Make an appointment</string>
    <string name="submit">Submit</string>
    <string name="maintenance">Maintenance</string>
    <string name="damage_repair">Damage repair</string>
    <string name="other">Other</string>
    <string name="year_of_vehicle">Year of vehicle</string>
    <string name="model_of_vehicle">Model of vehicle</string>
    <string name="edit_appointment">If you would like to change anything about your appointment you
        can navigate to your profile, find the appointment under "Appointment History" and click on
        it</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_profile_picture">Change profile Picture:</string>
    <string name="change_name">Change name</string>
    <string name="change_email">Change email</string>
    <string name="edit">Edit</string>
    <string name="about_desc">THE SHOP\'s main goal is to do it right
        the first time. We strive for excellent service and quick repairs. There\'s no upselling or
        extra fees when working with us because we want to give you the best, most honest experience
        possible to get your car back to you in better shape than ever.</string>
    <string name="about_the_shop">About THE SHOP:</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="phone_number">Phone number: 123-456-7890</string>
    <string name="our_address">Our address: 123 Main Street, CT</string>
    <string name="hours">Hours: Monday-Friday: 8:00 AM to 5:00 PM</string>
    <string name="reviews">Reviews</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="about_us">About us</string>
    <string name="review_us">Review Us!</string>
    <string name="explain_your_rating_here">Explain your rating here!</string>
    <string name="description">Description</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="call_us">Call us</string>
    <string name="coolant">coolant</string>
    <string name="battery">battery</string>
    <string name="update_dates">Update Dates</string>
    <string name="oil">oil</string>
    <string name="brakes">brakes</string>
    <string name="transmission">transmission</string>
    <string name="air_filter">air filter</string>
</resources>